# flyql

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  alerts  context7.json
.github/scripts/: test_validate_version.py  validate_version.py
.github/workflows/: docker-build-push.yml  docs.yml  e2e-report.yml  e2e.yml  publish.yaml  test.yml
cli/examples/: fields.json  logs.jsonl  queries.txt
cli/golang/: README.md  go.mod  go.sum  main.go
cli/python/: README.md  flyqlcli.py  requirements.txt
demo/: App.vue  Makefile  go.mod  index.html  package-lock.json  package.json  renderers.js  server.go  vite.config.js
docs/: Dockerfile  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
docs/scripts/: capture-snapshots.mjs  verify-snapshots.mjs  verify-sql-examples.mjs
docs/test/: snippet.test.ts
e2e/: Makefile  docker-compose.yml  errno_parity_js_cli.js  errno_parity_py_cli.py  runner.py  wait-for-dbs.sh
e2e-viewer/: App.vue  Makefile  index.html  package-lock.json  package.json  vite.config.js
e2e-viewer/src/: App.vue  api.js  main.css  main.js
e2e/baselines/: pre-paren-cleanup-report.json  pre-paren-cleanup-reproducers.md  pre-precedence-report.json  pre-precedence-reproducers.md
e2e/scripts/: null_semantics_audit.py
e2e/templates/: report.html.j2
e2e/versions/: default.env  legacy.env
errors/: generate.py  public_api_surface.json  registry.json
golang/: Makefile  bind.go  bind_data_test.go  bind_test.go  char.go  char_type.go  column.go  column_test.go  constants.go  errno_coverage_test.go  error_registry_parity_test.go  errors.go  errors_generated.go  errors_generated_test.go  expression.go  flyql.go  flyql_test.go  go.mod  key.go  key_test.go  node.go  parser.go  parser_max_depth_test.go  positions_test.go  public_api.go  public_api_test.go  range.go  state.go  tokenize.go  tokenize_test.go  type.go  typed_chars_test.go  validator.go  validator_test.go
golang/columns/: columns.go  columns_test.go  errno_coverage_test.go  error_registry_parity_test.go  errors_generated.go  errors_generated_test.go  renderer.go  renderer_registry.go  renderer_registry_test.go  renderer_validator_test.go  validator.go  validator_test.go
golang/e2e/: clickhouse_test.go  datetime_matcher_test.go  dialect_parity_test.go  e2e_test.go  go.mod  go.sum  matcher_test.go  postgresql_test.go  (+1 more)
javascript/: .eslintrc.json  Makefile  README.md  package-lock.json  package.json  parser.js  pnpm-lock.yaml  test-script.js  vite.config.js  vitest.config.js  vitest.e2e.config.js
python/: Makefile  README.md  pyproject.toml  to_text.py
python/e2e/: conftest.py  test_clickhouse_e2e.py  test_datetime_matcher_e2e.py  test_dialect_parity.py  test_matcher_e2e.py  test_postgresql_e2e.py  test_starrocks_e2e.py
python/flyql/: __init__.py  bind.py  char.py  errors_generated.py  exceptions.py  expression.py  flyql_type.py  generator.py  parser.py  state.py  tokenize.py  tree.py  types.py
python/flyql/columns/: README.md  __init__.py  char.py  column.py  constants.py  exceptions.py  parser.py  state.py  validator.py
python/flyql/core/: __init__.py  char.py  column.py  constants.py  exceptions.py  expression.py  key.py  parser.py  range.py  state.py  tree.py  validator.py
python/flyql/generators/: __init__.py  _paren.py  transformer_helpers.py
python/flyql/generators/clickhouse/: __init__.py  column.py  constants.py  field.py  generator.py  helpers.py
python/flyql/generators/postgresql/: __init__.py  column.py  constants.py  generator.py  helpers.py
python/flyql/generators/starrocks/: __init__.py  column.py  constants.py  field.py  generator.py  helpers.py
python/flyql/literal/: __init__.py  literal_kind.py
python/flyql/matcher/: __init__.py  evaluator.py  key.py  matcher.py  record.py
python/flyql/renderers/: __init__.py  base.py  registry.py
python/flyql/transformers/: __init__.py  base.py  builtins.py  registry.py
python/snippets/: .pylintrc  getting_started_columns.py  getting_started_generate_clickhouse.py  getting_started_parameters.py  getting_started_parse.py  getting_started_transformers.py
python/snippets/getting_started/: generate_clickhouse.py  match.py  parameters.py  transformers.py
python/snippets/recipes/: active_priority_or_severity.py  ast_custom_generator.py  enabled_not_suspended_last_login.py  eq_status.py  error_not_warning_regex.py  event_type_in_or.py  in_stock_category_rating.py  list_type_consistency.py  pending_due_date_or_urgent.py  price_quantity.py
python/tests/: test_doc_snippets.py  test_errno_coverage.py  test_error_registry_parity.py  test_flyql_type.py  test_literal_kind.py  test_package_exports.py  test_tokenize.py  test_types.py  tests_char.py  tests_expression.py  tests_matcher.py  tests_tree.py
python/tests/columns/: helpers.py  test_parser.py  test_validator.py
python/tests/core/: helpers.py  test_bind.py  test_key.py  test_parser.py  test_parser_params.py  test_positions.py  test_typed_chars.py  test_validator.py  tests_char.py  tests_expression.py  tests_tree.py
python/tests/core/parser/: helpers.py  test_basic.py  test_boolean.py  test_complex.py  test_errors.py  test_syntax.py
python/tests/generators/: test_paren.py  test_paren_malformed.py  test_paren_reproducers.py
python/tests/generators/clickhouse/: test_column.py  test_field.py  test_formatting.py  test_generator.py  test_helpers.py  test_select_renderers.py  test_shared_data.py
python/tests/generators/postgresql/: test_column.py  test_formatting.py  test_generator.py  test_helpers.py  test_select_renderers.py  test_shared_data.py
python/tests/generators/starrocks/: test_formatting.py  test_select_renderers.py  test_starrocks_column.py  test_starrocks_field.py  test_starrocks_generator.py  test_starrocks_helpers.py  test_starrocks_shared_data.py
python/tests/matcher/: test_date_datetime.py  test_match.py  test_no_re2.py  test_no_renderer_coupling.py  tests_matcher.py
python/tests/renderers/: test_registry.py
python/tests/transformers/: test_base.py  test_builtins.py  test_custom_registration.py  test_registry.py
(+747 files in other folders)
