[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "flyql"
version = "0.0.36"
dependencies = ["google-re2>=1.1"]
requires-python = ">=3.10"
license = { text = "MIT License" }
authors = [
    { name = "Ilia (HumanUser) Khomutov" }
]
description = "A lightweight, injection-proof query language for multi-dialect SQL generation"
readme = "README.md"
keywords = ["query", "parser", "ast", "sql", "clickhouse", "filter"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://flyql.dev"
Repository = "https://github.com/iamtelescope/flyql.git"
Issues = "https://github.com/iamtelescope/flyql/issues"
Documentation = "https://docs.flyql.dev"

[dependency-groups]
test = [
    "pytest>=8.4",
    "black>=25.1",
    "mypy>=1.16",
]
dev = [
    "pytest>=8.4",
    "black>=25.1",
    "mypy>=1.16",
    "pylint>=3.0",
]

[tool.pylint.master]
ignore = [
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    "venv",
    ".venv",
    "tests",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",      # C0114
    "missing-function-docstring",    # C0116
    "missing-class-docstring",       # C0115
    "duplicate-code",                # R0801
    "no-else-return",                # R1705
    "no-else-raise",                 # R1720
    "too-few-public-methods",        # R0903
    "too-many-instance-attributes",  # R0902
    "too-many-branches",             # R0912
    "too-many-statements",           # R0915
    "too-many-return-statements",    # R0911
    "too-many-public-methods",       # R0904
    "too-many-locals",               # R0914
    "too-many-arguments",            # R0913
    "too-many-positional-arguments", # R0917
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
python_files = ["test_*.py", "tests_*.py"]

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
