[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "flyql"
version = "0.0.56"
dependencies = []
requires-python = ">=3.10"
license = { text = "MIT License" }
authors = [
    { name = "Ilia (HumanUser) Khomutov" }
]
description = "A lightweight, injection-proof query language for multi-dialect SQL generation"
readme = "README.md"
keywords = ["query", "parser", "ast", "sql", "clickhouse", "filter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Text Processing :: Linguistic",
]

[project.optional-dependencies]
re2 = ["google-re2>=1.1"]

[project.urls]
Homepage = "https://flyql.dev"
Repository = "https://github.com/iamtelescope/flyql.git"
Issues = "https://github.com/iamtelescope/flyql/issues"
Documentation = "https://docs.flyql.dev"

[dependency-groups]
test = [
    "pytest>=8.4",
    "black>=25.1",
    "mypy>=1.16",
]
dev = [
    "pytest>=8.4",
    "black>=25.1",
    "mypy>=1.16",
    "pylint>=3.0",
]

[tool.pylint.master]
ignore = [
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    "venv",
    ".venv",
    "tests",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",      # C0114
    "missing-function-docstring",    # C0116
    "missing-class-docstring",       # C0115
    "duplicate-code",                # R0801
    "no-else-return",                # R1705
    "no-else-raise",                 # R1720
    "too-few-public-methods",        # R0903
    "too-many-instance-attributes",  # R0902
    "too-many-branches",             # R0912
    "too-many-statements",           # R0915
    "too-many-return-statements",    # R0911
    "too-many-public-methods",       # R0904
    "too-many-locals",               # R0914
    "too-many-arguments",            # R0913
    "too-many-positional-arguments", # R0917
    "raise-missing-from",            # W0707 — existing code predates enforcement; follow-up
    "broad-exception-caught",        # W0718 — existing code predates enforcement; follow-up
    "consider-using-in",             # R1714 — existing code predates enforcement; follow-up
    "wrong-import-order",            # C0411 — existing code predates enforcement; follow-up
    "wrong-import-position",         # C0413 — existing code predates enforcement; follow-up
    "redefined-builtin",             # W0622 — `range` is the local type name, not builtin; follow-up to rename
    "import-outside-toplevel",       # C0415 — existing lazy imports by design; follow-up to document
    "invalid-name",                  # C0103 — enum members use PascalCase intentionally
    "unused-variable",               # W0612 — existing; follow-up
    "unused-import",                 # W0611 — existing; follow-up
    "unused-argument",               # W0613 — existing abstract-method signatures
    "reimported",                    # W0404 — existing; follow-up
    "line-too-long",                 # C0301 — existing; follow-up (line-length already 120 in config)
    "too-many-lines",                # C0302 — existing large parser/generator files
    "too-many-boolean-expressions",  # R0916 — existing parser predicates
    "no-else-continue",              # R1724 — existing; follow-up
    "consider-using-f-string",       # C0209 — existing; follow-up
    "fixme",                         # W0511 — existing TODO/FIXME comments
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "."
]
python_files = ["test_*.py", "tests_*.py"]
filterwarnings = ["error::DeprecationWarning"]

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
